tests/baselines/reference/parserComputedPropertyName5.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts(1,11): error TS1185: Modifiers cannot appear here.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts (1 errors) ====
    var v = { public get [e]() { } };
              ~~~~~~
!!! error TS1185: Modifiers cannot appear here.